rke2/web-server/httproute-web-apps.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: homeassistant
  namespace: web-server
  annotations:
    cloudflare-operator.io/content: "ha.hwcopeland.net"
    cloudflare-operator.io/type: "CNAME"
    cloudflare-operator.io/proxied: "true"
    cert-manager.io/cluster-issuer: cf-issuer
    # Authentik forward auth integration
    authentik.home.arpa/enabled: "true"
spec:
  parentRefs:
    - name: hwcopeland-gateway
      namespace: kube-system
      sectionName: https
  hostnames:
    - "ha.hwcopeland.net"
  rules:
    - backendRefs:
        - name: ha-service
          port: 80
